# quill-windows

./: README.md  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: app_state.rs  clipboard.rs  keyring_manager.rs  lib.rs  ocr.rs  panel.rs  tray.rs
src-tauri/src/ai/: claude.rs  gemini.rs  mod.rs  parser.rs  prompts.rs
src-tauri/src/models/: analysis.rs  explanation.rs  mod.rs  mode.rs
src/components/: AlternativesView.tsx  Breadcrumb.tsx  FloatingPanel.tsx  LevelPicker.tsx  MarkdownView.tsx  ModePicker.tsx  ResourcesView.tsx  Settings.tsx  SuggestionView.tsx  VocabularyCard.tsx
src/hooks/: useAnalysis.ts  useDrillDown.ts
src/lib/: openUrl.ts  types.ts
